--- a/exercise_2.html
+++ b/exercise_2.html
@@ -5,7 +5,7 @@
     <meta name="description" content="This is a starter test file for practicing html markup for the IT030 course">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Professor Rahman">
-  <title>“IT030 Exercise 2 by <"Patrick Wall">/title>
+  <title>“IT030 Exercise 2 by "Patrick Wall"</title>
   </head>
   <body>
     <div>
