--- a/exercise_2.html
+++ b/exercise_2.html
@@ -20,17 +20,21 @@
   <div><br></div>
   <div><hr></div>
 
-  <ul>
-    <li<"eggs"></li<"eggs">
-    <li<"butter"></li<"butter">
-    <li<"cheese"></li<"cheese">
-    <li<"tomato"></li<"tomato">
-    <li<"bacon"></li<"bacon">
- <ul>
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
 
-  <li>
-    <li<"add eggs, butter and cheese to a mixing bowl"></li<"add>
-    <li
+<div><br>
+
+  <ol>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+<br>
 
 
   </body>
