--- a/exercise_2.html
+++ b/exercise_2.html
@@ -44,4 +44,6 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 <div><br></div>
 
 <a href="www.hofstra.edu">Click Here</a>
+
+<a href="http://www.scotscollege.school.nz>Scots College</a>
 </html>
