--- a/exercise_2.html
+++ b/exercise_2.html
@@ -45,5 +45,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 
 <a href="www.hofstra.edu">Click Here</a>
 
-<a href="http://www.scotscollege.school.nz>Scots College</a>
+<a href="www.scotscollege.school.nz">Scots College</a>
+
+
 </html>
