--- a/exercise_2.html
+++ b/exercise_2.html
@@ -33,6 +33,7 @@
   <li>Coffee</li>
   <li>Tea</li>
   <li>Milk</li>
+  <li>biscuits</li>
 </ol>
 
 <br>
@@ -46,6 +47,16 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 <a href="www.hofstra.edu">Click Here</a>
 
 <div><a href="www.scotscollege.school.nz">Scots College</a>
+
+  <br>
+
+  <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>About</title>
+  </head>
+</html> 
 
 
 </html>
