--- a/exercise_2.html
+++ b/exercise_2.html
@@ -46,7 +46,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 
 <a href="www.hofstra.edu">Click Here</a>
 
-<div><a href="www.scotscollege.school.nz">Scots College</a>
+<span><a href="www.scotscollege.school.nz">Scots College</a>
 
   <br>
 
