--- a/Midterm/Lessons.html
+++ b/Midterm/Lessons.html
@@ -14,7 +14,7 @@
       <div class="grid">
            <nav id="mainNav">
             <ul>
-              <li><a href=Home_Page.html>Home</a></li>
+              <li><a href=midterm_patrickwall.html>Home</a></li>
                <li><a href=Rules.html>Rules</a></li>
                <li><a href=Lessons.html>Lessons</a></li>
             </ul>
